# MetaboConverter

./: LICENSE  README.md  pyproject.toml  requirements.txt  sample_data.xlsx  setup.py
Docs/: component specification.docx  functional specification.docx
MetaboConverter/: main.py  sample_data.xlsx
MetaboConverter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: program.py  test_program.py
tests/: data_test.py  gui_test.py
