[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MetaboConverter"
version = "0.1.0"
description = "A Python package to view and analyze Excel sheets via a GUI."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yuxuan Mao", email = "ymao@uw.edu"}
]
requires-python = ">=3.6"
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "openpyxl>=3.0.0",
    "XlsxWriter>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/JaydenMao102/MetaboConverter.git"

[tool.hatch.metadata]
license = "MIT License"

[tool.hatch.build.targets.wheel]
